--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,18 @@ search-style.css
 top-flight-routes-style.css
 travel-blogs-style.css
 EMT.html
+book-with-us.html
+exclusive-offers.html
+famous-tourist-attraction.html
+footer.html
+header_w_css.html
+header-1.html
+header.html
+refund.html
+search-flights-hotels-bus.html
+search.html
+top-flight-routes.html
+travel-blogs.html
 Template.html
 Test_1.html
 Test_2.html
