--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@ search-flights-hotels-bus.html
 search.html
 top-flight-routes.html
 travel-blogs.html
+info.html
+info-1.html
 Template.html
 Test_1.html
 Test_2.html
